--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 The docs folder contains the actively hosted GitHub pages project.
 
-As of March 21, 2023, this page is my Work-In-Progress character information site for popular game Genshin Impact
+This repo is for my CSC-484 class at California Polytechnic State University - San Luis Obispo.
